# Burger

./: .gdbinit  .gitignore  .travis.yml  CMakeLists.txt  README.md  README_EN.md  build.sh  build_release.sh
benchmarks/: CMakeLists.txt  README.md  logger_benchmark.cc  result.txt  spd_test.cc
benchmarks/ChatServer/: chat_benchmark.py  result.txt  result_delta_time.txt  result_delta_time_2.txt  result_delta_time_muduo.txt
benchmarks/RingBuffer/: RingBuffer_benchmark.cc
benchmarks/Throughput/: callgrind.out.117861-01  callgrind.out.117861-02  callgrind.out.117861-03  callgrind.out.117861-04  client.cc  coServer.cc  co_single_thread.sh  problems.md  res_co.txt  result.txt  server.cc  single_thread.sh
benchmarks/Throughput/logs/: log.txt
benchmarks/threadPool_benchmark/: ThreadPool_benchmark.cc
benchmarks/threadPool_benchmark/threadpool/: pool.hpp
burger/base/: Atomic.h  BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Config.cc  Config.h  Coroutine.cc  Coroutine.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  Env.cc  Env.h  Exception.cc  Exception.h  Log.cc  Log.h  Singleton.h  StringUtil.cc  StringUtil.h  ThreadPool.cc  ThreadPool.h  Timestamp.cc  Timestamp.h  Type.cc  Type.h  Util.cc  Util.h  copyable.h  coroutine.cc  coroutine.h  log.cc  log.h  scheduler.cc  scheduler.h
burger/base/fcontext/: fcontext.S  fcontext.h  jump_x86_64_sysv_elf_gas.S  make_x86_64_sysv_elf_gas.S
burger/base/tests/: Atomic_unittest.cc  BlockingQueue_bench.cc  BlockingQueue_test.cc  BoundedBlockingQueue_test.cc  CMakeLists.txt  Coroutine_test.cc  Coroutine_test01.cc  Coroutine_test02.cc  Coroutine_test03.cc  Exception_unittest.cc  SingletonThreadLocal_test.cc  Singleton_test.cc  StringUtil_test.cc  ThreadPool_test.cc  Timestamp_unittest.cc  co_single_thrd_test.cc  config_test.cc  env_test.cc  log_test.cc  mutex_test.cc  sched_test.cc  spdlog_test.cc  util_test.cc  yaml_test.cc
burger/db/: CMakeLists.txt  DB.h  MysqlManager.cc  MysqlManager.h  MysqlRes.cc  MysqlRes.h  MysqlRes1.cc  MysqlStmt1.cc  MysqlStmtRes.cc  MysqlStmtRes.h  MysqlTime.h  MysqlTime1.cc  MysqlTransaction.cc  MysqlTransaction1.cc  MysqlTransaction1.h  MysqlUtil.h  MysqlUtil1.cc  db.h  mysql.cc  mysql.h  mysqlManager.h  mysqlRes.h  mysqlStmt.cc  mysqlStmt.h  mysqlStmtRes.h  mysqlTime.cc  mysqlTime.h  mysqlTransaction.h
burger/db/tests/: 01_connect.cc  02_retrive.cc  03_next_retrive.cc  04_last_insert_rowid.cc  05_column_headers.cc  06_mysql_time.cc  07_stmt.cc  08_stmt_res.cc  CMakeLists.txt  mysql_test.cc  mysql_test01.cc  mysql_test02.cc
burger/http/: CMakeLists.txt  HttpMethod.h  HttpRequest.cc  HttpRequest.h  HttpRequestParser.cc  HttpRequestParser.h  HttpResponse.cc  HttpResponse.h  HttpResponseParser.cc  HttpResponseParser.h  HttpServer.h  HttpStatus.h  MapType.h  Router.cc  Router.h  beef.h  http11_common.h  http11_parser.cc  http11_parser.h  http11_parser.rl  httpclient_parser.rl  version.h
burger/http/tests/: CMakeLists.txt  example.cc  test.py  test_httpMethod.cc  test_req_parser.cc  test_response.cc  test_response_parser.cc  test_version.cc
burger/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  CoEpoll.cc  CoEpoll.h  CoTcpConnection.cc  CoTcpConnection.h  CoTcpServer.cc  CoTcpServer.h  CoTimerQueue.cc  Connector.cc  Connector.h  Endian.h  Epoll.cc  Epoll.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  Hook.cc  Hook.h  IBuffer.cc  IBuffer.h  ITimerQueue.cc  InetAddress.cc  InetAddress.h  Processor.cc  Processor.h  ProcessorThread.cc  ProcessorThread.h  RingBuffer.cc  RingBuffer.h  Scheduler.cc  (+17 more)
burger/net/tests/: Acceptor_test.cc  Buffer_unittest.cc  CMakeLists.txt  EventLoopThreadPool_test.cc  EventLoopThread_test.cc  EventLoop_test01.cc  EventLoop_test02.cc  EventLoop_test03.cc  Hook_test.cc  InetAddress_unittest.cc  Reactor_test01.cc  Reactor_test02.cc  Reactor_test05.cc  RingBuffer_unittest.cc  Sched_test.cc  Socket_unittest.cc  TcpClient_test.cc  char_gen_test.cc  coTcpServer_test.cc  idleCoQue_test.cc  runInLoop_test.cc  sched_stop_test.cc  sched_timer_test.cc  sched_timer_test01.cc  sched_timer_test02.cc  sched_timer_test03.cc  shed_stop_test.cc  shutdown_test.cc  tcpConnection_test01.cc  tcpConnection_test02.cc  tcpConnection_test03.cc  tcpConnection_test03.py  tcpConnection_test03_client.cc  tcpConnection_test04.cc  tcpConnection_test05.cc  timer_test.cc  timerfd_test.cc
burger/rpc/: CMakeLists.txt  RpcApp.cc  RpcApp.h  RpcChannel.cc  RpcChannel.h  RpcController.cc  RpcController.h  RpcProvider.cc  RpcProvider.h  RpcServer.cc  RpcServer.h  rpcHeader.pb.cc  rpcHeader.pb.h  rpcHeader.proto
burger/rpc/example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  readme.md  user.pb.cc  user.pb.h  user.proto
burger/rpc/example/callee/: friendService.cc  userService.cc
burger/rpc/example/caller/: callFriendService.cc  callUserService.cc
burger/rpc/example/proto/: friend.proto  user.proto
burger/rpc/tests/: CMakeLists.txt
burger/rpc/tests/usageTest/: test.pb.h  (+3 more)
examples/chat/: CMakeLists.txt  chat.md  client.cc  codec.h  loadtest.cc  server.cc  server_threaded.cc  server_threaded_efficient.cc  server_threaded_highperformance.cc
examples/filetransfer/: CMakeLists.txt  download.cc  download2.cc  download3.cc  readme.md
examples/filetransfer/loadTest/: fileTransfer_test.cc
examples/pingpong/: CMakeLists.txt  client.cc  server.cc
examples/simple/: CMakeLists.txt
examples/simple/chargen/: chargen.cc  chargen.h  main.cc
examples/simple/chargenclient/: chargenclient.cc
examples/simple/daytime/: daytime.cc  daytime.h  main.cc
examples/simple/discard/: discard.cc  discard.h  main.cc
examples/simple/echo/: echo.cc  echo.h  main.cc
examples/simple/send_client/: client.cc  client.h  main.cc
tests/: CMakeLists.txt  chrono_test.cc  gtest_test.cc  ini_test.cc  json_test.cc  lower_bound.cc  rvo.cc  shareFromThis.cc  test_vector_unique_ptr.cc  thread_emplace_back.cc  thread_local.cc  thread_test.cc  time_test.cc  xml_test.cc
(+101 files in other folders)
