# add_executable(01_connect 01_connect.cc)
# target_link_libraries(01_connect burger_db)

# add_executable(02_retrive 02_retrive.cc)
# target_link_libraries(02_retrive burger_db)

# add_executable(03_next_retrive 03_next_retrive.cc)
# target_link_libraries(03_next_retrive burger_db)

# add_executable(04_last_insert_rowid 04_last_insert_rowid.cc)
# target_link_libraries(04_last_insert_rowid burger_db)

# add_executable(05_column_headers 05_column_headers.cc)
# target_link_libraries(05_column_headers burger_db)

# add_executable(06_mysql_time 06_mysql_time.cc)
# target_link_libraries(06_mysql_time burger_db)

# add_executable(07_stmt 07_stmt.cc)
# target_link_libraries(07_stmt burger_db)

# add_executable(08_stmt_res 08_stmt_res.cc)
# target_link_libraries(08_stmt_res burger_db)

